Changelog
=========

2019.4.0rc5 (unreleased)
------------------------

- Bump ftw.keywordwidget to 2.1.2 to fix race condition when adding new keywords. [lgraf]
- Add trash_document and untrash_document file_actions. [lgraf]
- Bump plone.restapi to 5.0.3 to get fix for filtering vocabs by non-ASCII titles. [lgraf]
- Update the usersettings-serializer: A pure plone user has always seen all screens. [elioschmutz]
- Support combined notation for task responsible. [phgross]
- Fix an issue with todo(-list) ids not being stored as bytestring. [deiferni]
- Disallow mail upload as documents via API. [phgross]
- Update Products.LDAPUserFolder from 2.28.post2 to 2.28.post3. [elioschmutz]
- Extend dossier serializer with `is_subdossier`. [elioschmutz]
- Add @globalindex API endpoint. [phgross]
- Add proposals to @listing endpoint. [njohner]
- Remove catalog support for @listing endpoint. [elioschmutz]
- Moved reminder options vocabulary to globaly registered vocabulary. [phgross]
- Add a user action to switch to the new gever-ui. [elioschmutz]
- Add support for contacts to the @listing endpoint. [phgross]


2019.4.0rc4 (2019-10-22)
------------------------

- Preserve query string in the resolve notification view. [phgross]
- Add UID to listing endpoints supported fields. [phgross]
- Allow adding favorites by UID parameter via favorites endpoint. [phgross]
- Add UID to listing endpoints supported fields. [phgross]
- Allow adding favorites with UID parameter via favorites endpoint. [phgross]
- Bump ftw.keywordwidget version to fix missing titles on terms. [njohner]
- Allow text field in task deadline modification through API. [njohner]
- Make `issuer` filterable in the @lising endpoint. [elioschmutz]
- Implement absolute reminder dates in the reminder-selector. [elioschmutz]
- Fix mail deserialization for mails uploaded through tus-upload. [njohner]
- Downpin ftw.recipe.solr to 1.2.1 to have log4j configuration valid for solr < 7.4.X [deiferni]