@@ -49,6 +49,9 @@ Doc-Properties Dokument:
 - ``ogg.document.reception_date``
 - ``ogg.document.delivery_date``
 - ``ogg.document.version_number``
+- ``ogg.document.document.creator.user.*`` - Doc-Properties des Benutzers, der das Dokument erstellt hat. Es werden die gleichen Doc-Property-Information wie beim aktuellen Benutzer verwendet, siehe `Doc-Properties aktueller Benutzer:`_
+
+
 
 Doc-Properties Sitzung Antrag/Traktandum:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
